kubernetes/apps/network/external-services/app/nas.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-nas
  namespace: networking
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/name: TrueNas
    gethomepage.dev/icon: truenas.png
    gethomepage.dev/href: https://nas.${SECRET_DOMAIN}
    gethomepage.dev/description: TrueNAS Storage
    gethomepage.dev/widget.type: truenas
    gethomepage.dev/widget.url: https://nas.${SECRET_DOMAIN}
    gethomepage.dev/widget.key: ${TRUENAS_KEY}
    gethomepage.dev/widget.enablePools: "true"
    gethomepage.dev/widget.nasType: "core"
spec:
  ingressClassName: internal
  rules:
    - host: &host nas.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: external-service-nas
                port:
                  number: 80
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service-nas
  namespace: networking
subsets:
  - addresses:
      - ip: ${SECRET_NAS_IP}
    ports:
      - name: http
        port: 80
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: external-service-nas
  namespace: networking
spec:
  ports:
    - name: http
      port: 80
  type: ClusterIP
